--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="add_widget">Add widget</string>
     <string name="no_description_available">No description available</string>
     <string name="no_ingredients_found">No ingredients found</string>
+    <string name="recipe_step_count">Step %1$d of %2$d</string>
+    <string name="recipe_introduction">Introduction</string>
 
 </resources>
