--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="recipe_step_count">Step %1$d of %2$d</string>
     <string name="recipe_introduction">Introduction</string>
     <string name="recipe_ingredients">Recipe Ingredients</string>
+    <string name="recipe_servings">Servings: %1$d</string>
 
 </resources>
