--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="recipe_servings">Servings: %1$d</string>
     <string name="ingredients">Ingredients</string>
     <string name="steps">Steps</string>
+    <string name="check_internet_connection">Please check your internet connection</string>
 
 </resources>
